# open-chess-clock

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: pages-ci.yaml
src/: countdown.rs  error.rs  finish.rs  lcd_writer.rs  main.rs  millis.rs  pause.rs  serial.rs  time_set.rs
www/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
www/src/: clock.ts  main.ts  runtime.ts  serial.ts  serialclock.ts  style.css
