[package]
name = "open-chess-clock"
version = "1.1.0"
authors = ["zabackary <137591653+zabackary@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "open-chess-clock"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = "0.5.2"
hd44780-driver = "0.4.0"
debouncr = "0.2.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
